Sync microblaze branch with gcc-4.4.2 release.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/microblaze@153914 138bc75d-0d04-0410-961f-82ee72b054a4